test/error/error-empty-mesh.base
error-empty-mesh.sc:7:22: warning: mesh definition with no fields
  uniform mesh MyMesh{
                     ^
1 warning generated.
